# vtb-moretech-2023

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  docker-compose.yml  nginx.conf  pyproject.toml  requirements.txt
app/: manage.py
app/backend/: settings.py
frontend/: Dockerfile  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/Map/: index.jsx  index.tsx  styles.module.css
frontend/src/components/Sidebar/: index.jsx  index.tsx  styles.module.css
frontend/src/layout/Header/: index.jsx  index.tsx  styles.module.css
frontend/src/layout/Main/: index.jsx  index.tsx  styles.module.css
frontend/src/ui/Button/: index.jsx  index.tsx  styles.module.css
frontend/src/ui/Input/: index.jsx  index.tsx  styles.module.css
resources/: offices.json
